--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -32,8 +32,9 @@
 
 
 
-      <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a>
-      <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
+      <a class="sidebar-nav-item" href="{{ site.github.repo }}">Blog</a>
+      <a class="sidebar-nav-item" href="https://www.linkedin.com/in/william-guss-178a6187">Linkedin</a>
+      <a class="sidebar-nav-item" href="https://github.com/MadcowD">GitHub</a>
       <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
     </nav>
 
