--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -32,7 +32,7 @@
 
 
 
-      <a class="sidebar-nav-item" href="{{ site.github.repo }}">Blog</a>
+      <a class="sidebar-nav-item" href="/blog">Blog</a>
       <a class="sidebar-nav-item" href="https://www.linkedin.com/in/william-guss-178a6187">Linkedin</a>
       <a class="sidebar-nav-item" href="https://github.com/MadcowD">GitHub</a>
       <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
