--- a/_layouts/paper.html
+++ b/_layouts/paper.html
@@ -4,12 +4,11 @@
   {% include head.html %}
 
   <body>
-
-    {% include sidebar.html %}
-
-    <div class="content container">
-      {{ content }}
+      <div class="paper">
+		<h1 class="paper-title">{{ page.title }}</h1>
+		<span></span> 
     </div>
 
   </body>
 </html>
+
