Another URL fix.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -35,10 +35,10 @@
 </script>
 
   <!-- CSS -->
-  <link rel="stylesheet" href="{{ site.baseurl }}public/css/poole.css">
-  <link rel="stylesheet" href="{{ site.baseurl }}public/css/custom.css">
-  <link rel="stylesheet" href="{{ site.baseurl }}public/css/syntax.css">
-  <link rel="stylesheet" href="{{ site.baseurl }}public/css/hyde.css">
+  <link rel="stylesheet" href="{{ "/" }}public/css/poole.css">
+  <link rel="stylesheet" href="{{ "/" }}public/css/custom.css">
+  <link rel="stylesheet" href="{{ "/" }}public/css/syntax.css">
+  <link rel="stylesheet" href="{{ "/" }}public/css/hyde.css">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface">
   <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/dreampulse/computer-modern-web-font/master/fonts.css">
 
