--- a/_layouts/paper.html
+++ b/_layouts/paper.html
@@ -6,7 +6,7 @@
   <body>
     <div class="paper-container">
 	      <div class="paper">
-			<h1 class="paper-title">{{ page.title }}</h1>
+			<h1 class="paper-title">{{ page.title }} [<a href={{ page.arxiv }}>arxiv</a>]</h1>
 			<div class="title_information">
 				{% for id in page.authors %}
 					<span class="author"> <a  href={{ id[1] }}> {{ id[0] }}</a><sup>{{ id[2] }}</sup> </span>
@@ -25,6 +25,15 @@
 					<div>
 						<img class="visual_abstract" src={{ page.visual_abstract}} />
 					</div>
+				{{% endif %}}
+
+				{{% if page.video_abstract %}}
+				<div>
+					<video class="visual_abstract" autoplay loop>
+						<source src={{ page.video_abstract }} type="video/webm">
+					</video>
+				</div>
+				
 				{{% endif %}}
 
 				<div class="abstract">
