--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,11 +1,11 @@
 
 .post-title{
-  font-size: 36pt;
+  font-size: 20pt;
 }
 
 
 .paper-title{
-  font-size: 32pt;
+  font-size: 24pt;
   text-align: center;
   margin-left: auto;
 
@@ -24,7 +24,21 @@
 		margin-right: auto;
 	}
 
+
+.title_information {
+	margin-left: auto;
+	margin-right: auto;
+	max-width:100%;
+	text-align: center;
+}
+
+
 @media (min-width: 48em) {
+
+.paper-title{
+  font-size: 32pt;
+}
+
   .paper {
     max-width: 38rem;
     margin-left: auto;
@@ -45,14 +59,10 @@
   .paper-content{
 	width: 42rem;
 }
-
+.paper-title{
+  font-size: 32pt;
 }
 
-.title_information {
-	margin-left: auto;
-	margin-right: auto;
-	width:32rem;
-	text-align: center;
 }
 
 .author {
@@ -125,7 +135,7 @@
 }
 
 .paper-link{
-	width:35em;
+	max-width:35em;
 	margin-left:auto;
 	margin-right: auto;
 
