Adding neural homology.

--- a/_layouts/paper.html
+++ b/_layouts/paper.html
@@ -24,6 +24,7 @@
 				{{% if page.visual_abstract %}}
 					<div>
 						<img class="visual_abstract" src={{ page.visual_abstract}} />
+
 					</div>
 				{{% endif %}}
 
@@ -31,6 +32,7 @@
 				<div>
 					<video class="visual_abstract" autoplay loop>
 						<source src={{ page.video_abstract }} type="video/webm">
+						<img class="visual_abstract" src="/public/algtop.png" />
 					</video>
 				</div>
 				
