Adding new video.

--- a/_layouts/paper.html
+++ b/_layouts/paper.html
@@ -31,7 +31,8 @@
 				{{% if page.video_abstract %}}
 				<div>
 					<video class="visual_abstract" autoplay loop>
-						<source src={{ page.video_abstract }} type="video/webm">
+						<source src="/public/video.mp4" type="video/mp4">
+						<source src="/public/video.webm" type="video/webm">
 						<img class="visual_abstract" src="/public/algtop.png" />
 					</video>
 				</div>
