--- a/_layouts/paper.html
+++ b/_layouts/paper.html
@@ -30,7 +30,7 @@
 
 				{{% if page.video_abstract %}}
 				<div>
-					<video class="visual_abstract" autoplay loop muted>
+					<video class="visual_abstract" autoplay loop muted playsinline>
 						<source src="/public/video.mp4" type="video/mp4">
 						<source src="/public/video.webm" type="video/webm">
 						<img class="visual_abstract" src="/public/algtop.png" />
