--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,6 +22,15 @@
       }
     });
   </script>
+
+  <script type="text/javascript">
+    function fallback(video)
+    {
+      var img = video.querySelector('img');
+      if (img)
+        video.parentNode.replaceChild(img, video);
+    }
+  </script>
   
   <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
