--- a/_layouts/paper.html
+++ b/_layouts/paper.html
@@ -32,7 +32,7 @@
 				<div>
 					<video class="visual_abstract" autoplay loop muted playsinline>
 						<source src="/public/video.mp4" type="video/mp4">
-						<source src="/public/video.webm" type="video/webm">
+						<source src="/public/video.webm" type="video/webm" onerror="fallback(parentNode)">
 						<img class="visual_abstract" src="/public/algtop.png" />
 					</video>
 				</div>
